--- a/template/changing.html
+++ b/template/changing.html
@@ -376,8 +376,7 @@
                                             <td style="text-align: left; padding-left: 5px; padding-right: 5px;">
                                                 <h3 class="heading">Contact Info</h3>
                                                 <ul>
-                                                    <li><span class="text">Karawang , indonesia</span></li>
-                                                    <li><span class="text">+62 822 1011 9000</span></a></li>
+                                                    <li><span class="text">Bandung , indonesia</span></li>
                                                 </ul>
                                             </td>
                                         </tr>
